[gd_scene load_steps=5 format=3 uid="uid://cs0tinhspw870"]

[ext_resource type="Texture2D" uid="uid://b2yvcbv8cqtc0" path="res://assets/treasure/woodenBandana.png" id="1_7lumc"]
[ext_resource type="Script" path="res://scripts/treasure/wooden_treasure.gd" id="1_f36v4"]
[ext_resource type="FontFile" uid="uid://bv4aoa1310txh" path="res://assets/tilemap/BitPap.ttf" id="2_fx260"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ih1v"]
size = Vector2(40.3125, 33.75)

[node name="woodenTreasure" type="CharacterBody2D"]
scale = Vector2(0.8, 0.8)
script = ExtResource("1_f36v4")

[node name="InfoStats" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -118.75
offset_top = -40.0
offset_right = 73.25
offset_bottom = 112.0
scale = Vector2(0.5, 0.5)

[node name="ColorRect" type="ColorRect" parent="InfoStats"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -8.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.129412, 0.129412, 1)

[node name="TextureRect" type="TextureRect" parent="InfoStats/ColorRect"]
layout_mode = 0
offset_left = 64.0
offset_top = 34.0
offset_right = 120.0
offset_bottom = 90.0
texture = ExtResource("1_7lumc")

[node name="Title" type="Label" parent="InfoStats/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -87.0
offset_top = 8.0
offset_right = 87.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_fx260")
theme_override_font_sizes/font_size = 32
text = "Wooden Bandana"
horizontal_alignment = 1

[node name="Description" type="Label" parent="InfoStats/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.5
offset_top = 7.7
offset_right = 179.5
offset_bottom = 42.7
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.625, 0.625)
theme_override_fonts/font = ExtResource("2_fx260")
theme_override_font_sizes/font_size = 16
text = "Your dash is slightly longer, and grants more
invulnerability."
horizontal_alignment = 1

[node name="Flavor" type="Label" parent="InfoStats/ColorRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -86.53
offset_top = -40.95
offset_right = 162.47
offset_bottom = -5.94995
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.7, 0.7)
theme_override_fonts/font = ExtResource("2_fx260")
theme_override_font_sizes/font_size = 16
text = "Even though you get splinters while wearing
it, you feel more attentive and diciplined."

[node name="WoodenBandana" type="Sprite2D" parent="."]
position = Vector2(-1.25, 0)
texture = ExtResource("1_7lumc")

[node name="WoodenArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WoodenArea"]
position = Vector2(-1.09375, -3.75)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_7ih1v")

[connection signal="body_entered" from="WoodenArea" to="." method="_on_wooden_area_body_entered"]
[connection signal="body_exited" from="WoodenArea" to="." method="_on_wooden_area_body_exited"]
